fix button spacing on recipe tiles

--- a/src/App.css
+++ b/src/App.css
@@ -584,6 +584,7 @@ p > a {
   
   .recipe-page-button {
     width: 100px;
+    margin-right: 20px;
   }
   
   .details-page {
